--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <div class="main-container">
     <div id="marketplace-col">
         <h2>Available</h2>
-        <div id="available-grid"></div>
+        <div id="available-grid" class="saas-grid"></div>
         <h2>Not Available</h2>
-        <div id="not-available-grid"></div>
+        <div id="not-available-grid" class="saas-grid"></div>
     </div>
     <div id="stats-div">
         <h2>My SaaS</h2>
-        <div id="my-saas-grid"></div>
+        <div id="my-saas-grid" class="saas-grid"></div>
         Budget: <div id="budget-bar"></div><br>
         <span id="customers-text">0</span><br>
         CAC: <div id="cac-bar"></div>
